pathfinder/tests/W3C_use_cases/XQUF/R/Tests/Q4.stable.out.Algebra
stdout of test 'Q4` in directory 'tests/W3C_use_cases/XQUF/R` itself:


# 21:28:31 >  
# 21:28:31 >  Mtimeout -timeout 60 Mserver "--config=/Win/MonetDB/.GNU.32.32.d.--disable-optimize_--enable-debug.PREFIX./MONETDB/etc/MonetDB.conf" --debug=10 --set "monet_mod_path=/Win/MonetDB/.GNU.32.32.d.--disable-optimize_--enable-debug.PREFIX./PATHFINDER/lib/MonetDB:/Win/MonetDB/.GNU.32.32.d.--disable-optimize_--enable-debug.PREFIX./PATHFINDER/lib/MonetDB/lib:/Win/MonetDB/.GNU.32.32.d.--disable-optimize_--enable-debug.PREFIX./MONETDB/lib/MonetDB:/Win/MonetDB/.GNU.32.32.d.--disable-optimize_--enable-debug.PREFIX./MONETDB/lib/MonetDB/lib:/Win/MonetDB/.GNU.32.32.d.--disable-optimize_--enable-debug.PREFIX./MONETDB/lib/MonetDB/bin" --set "gdk_dbfarm=/Win/MonetDB/.GNU.32.32.d.--disable-optimize_--enable-debug.PREFIX./MONETDB/var/MonetDB/dbfarm" --set "sql_logdir=/Win/MonetDB/.GNU.32.32.d.--disable-optimize_--enable-debug.PREFIX./MONETDB/var/MonetDB/sql_logs" --set "sql_logdir=/Win/MonetDB/.GNU.32.32.d.--disable-optimize_--enable-debug.PREFIX./MONETDB/var/MonetDB/xquery_logs" --set mapi_port=30119 --set monet_prompt= --trace --dbname=mTests_tests_W3C_use_cases_XQUF_R  < Q4.milS
# 21:28:31 >  

# Monet Database Server V4.13.1
# Copyright (c) 1993-2006, CWI. All rights reserved.
# Compiled for i686-redhat-linux-gnu/32bit with 32bit OIDs; dynamically linked.
# Visit http://monetdb.cwi.nl/ for further information.
module(unix);
module(pathfinder);

xquery("xml","
let $user := 
doc(\"users.xml\")/users/user_tuple[name=\"Annabel Lee\"]
return 
  do replace value of exactly-one($user/rating) with \"B\"
").printf();

xquery("xml","doc(\"users.xml\")").printf();
!ERROR: err:FORG0005, fn:exactly-one called with an empty sequence.
!ERROR: interpret: no matching MIL operator to 'printf(void)'.
!MAYBE YOU MEAN:
!	printf(str, ..any..) : void
quit();

# 21:28:31 >  
# 21:28:31 >  Done.
# 21:28:31 >  

